objects/PC_Program_Status_Indicator__mdt.object
<CustomObject>
    <description>This is a junction object to store the status indicators associated with a program status</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the record is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Program_Status__c</fullName>
        <label>Program Status</label>
        <referenceTo>PC_Program_Status__mdt</referenceTo>
        <relationshipLabel>PC Program Status Indicators</relationshipLabel>
        <relationshipName>PC_Program_Status_Indicators</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PC_Status_Indicator__c</fullName>
        <label>PC Status Indicator</label>
        <referenceTo>PC_Status_Indicators__mdt</referenceTo>
        <relationshipLabel>PC Program Status Indicators</relationshipLabel>
        <relationshipName>PC_Program_Status_Indicators</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Prg Journey Int Indicator Association</label>
    <pluralLabel>Prg Journey Int Indicator Associations</pluralLabel>
</CustomObject>